app/assets/stylesheets/stores/_store_new_product.scss
$title-font: #353434;

.form-title {
  height: 60px;
  color: $title-font;
  font-size: 40px;
  letter-spacing: -.4px;
  line-height: 60px;
  margin-left: 30px;
}

.form-text {
  margin-left: 30px;
  margin-right: 30px;
}

.new-product-form {
  display: flex;
  flex-direction: column;
  justify-content: initial;
  margin-left: 30px;

  &__info {
    display: flex;
    flex-direction: row;
    margin-right: 5%;
    flex-wrap: wrap;
  }

  &__image {
    position: relative;
    margin-top: 50px;
  }
};

.product-input {
  margin: 50px 30px 0 0;
  display: flex;
  flex-direction: column;

  &__btn {
    width: 136px;
    height: 40px;
    padding: 5px;
    background-color: $primary_color;
    color: $white;
    font-size: 15px;
    margin-bottom: 3%;
    border: 0;
    border-radius: 30.5px;
    margin-right: 25px;

    &--accept {
      background-color: $primary-color;

      &:hover {
        background-color: darken($color: $primary-color, $amount: 10%);
      }
    }

    &--cancel {
      background-color: $label-color;

      &:hover {
        background-color: darken($color: $label-color, $amount: 10%);
      }
    }

    &--danger {
      background-color: $danger-color;

      &:hover {
        background-color: darken($color: $danger-color, $amount: 10%);
      }
    }
  }

  &__box {
    margin-top: 10px;
    margin-bottom: 3%;
    text-align: left;
    font-size: 20px;
    background: transparent;
    border-top: 0;
    border-right: 0;
    border-left: 0;
    height: 33px;
    width: 350px;
    border-color: $primary-color;
    color: $label-color;

    &--danger {
      border-color: $danger-border-color;
    }
  }

  &__label {
    height: 16px;
    width: 175px;
    color: $label-color;
    font-size: 14px;
    font-weight: 500;
    line-height: 16px;

    &--danger {
      color: $danger-label-color;
      font-size: 12px;
      width: 300px;
      margin-top: 2px;
      margin-bottom: -18px;
    }
  }

  &__subtitle {
    height: 16px;
    width: 175px;
    color: $label-color;
    font-size: 10px;
    font-weight: 500;
    line-height: 16px;

    &--danger {
      color: $danger-label-color;
      width: 300px;
      margin-top: 2px;
      margin-bottom: -18px;
    }
  }

  &__link {
    width: 129px;
    height: 30px;
    padding: 5px;
    background-color: $primary_color;
    color: $white;
    font-size: 15px;
    margin-bottom: 3%;
    border: 0;
    border-radius: 30.5px;
    margin-right: 25px;

    &--cancel {
      background-color: $label-color;

      &:hover {
        background-color: darken($color: $label-color, $amount: 10%);
      }
    }
  }
}

.button-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  row-gap: 20px;
  width: fit-content;
  margin-top: 100px;
}

.file-container {
  display: flex;
  flex-direction: row;
  height: 56px;
  width: 350px;
  pointer-events: all;
  cursor: pointer;
  margin-bottom: 20px;
  background-color: rgba(67, 225, 198, .12);
  position: absolute;

  &--danger {
    background-color: $danger-background-color;
  }
}

.file-input > input[type='file'] {
  position: absolute;
  height: 56px;
  width: 350px;
  cursor: pointer;
  margin-bottom: 20px;
  opacity: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 3;
}

.image-preview {
  margin-bottom: 10px;

  &__preview {
    width: 250px;
    z-index: 1;
  }

  &__input {
    text-align: left;
    height: 56px;
    width: 56px;
    pointer-events: all;
    z-index: 2;
  }

  &__label {
    z-index: 1;
    margin-bottom: 16px;
    height: 16px;
    width: 175px;
    color: $label-color;
    font-size: 14px;
    font-weight: 500;
    line-height: 16px;

    &--danger {
      color: $danger-label-color;
      font-size: 12px;
      width: 300px;
      margin-top: 23px;
      margin-bottom: -15px;
    }
  }

  &__value {
    z-index: 1;
    padding-top: 17px;
    padding-left: 8px;
    height: 24px;
    width: 208px;
    opacity: .32;
    color: #353434;
    font-size: 20px;
    line-height: 24px;

    &--danger {
      color: $danger-label-color;
    }
  }
}

.link-button-text {
  padding-top: 7px;
}

